fixed sightings alignemt swiper screen scroll on mobile, subpage award placement done, index_card.html working on styling for card hover state, card alignment help!

--- a/sass/partials/_light.scss
+++ b/sass/partials/_light.scss
@@ -24,7 +24,3 @@
         }
     }
 }
-
-.light_mobile {
-    .caption {}
-}
